[project]
name = "mcpylib-map-art"
version = "0.1.0"
description = "A community tool for creating Minecraft map art using MCPyLib"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcpylib>=1.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
mcpylib-map-art = "main:cli"
